<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/myInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_info"
        android:padding="20dp"
        />

    <include layout="@layout/line_layout"/>

    <TextView
        android:id="@+id/schoolTalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_school"
        android:padding="20dp"
        />
    <include layout="@layout/line_layout"/>

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:padding="20dp"
        />
    <include layout="@layout/line_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_function"
        android:padding="20dp"
        />
    <include layout="@layout/line_layout"/>

</LinearLayout>
