<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/login_padding"
              android:layout_marginBottom="@dimen/login_padding">

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputLoginName"
        android:layout_marginTop="@dimen/login_padding"
        android:layout_marginBottom="@dimen/login_padding"/>

    <EditText
        android:id="@+id/loginPsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputLoginPsd"
        android:layout_marginTop="@dimen/login_padding"
        android:layout_marginBottom="@dimen/login_padding"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/btn_top"
        android:layout_marginBottom="@dimen/login_padding"/>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="@dimen/login_padding"/>
</LinearLayout>
