<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical"
            android:background="@mipmap/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/talk_margin"
        android:padding="@dimen/head_text_padding">
        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknow"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/city_text_size"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/addCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_add"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/weather_text_small"
            android:textSize="@dimen/weather_text_small"
            android:background="@drawable/talk_text_shape"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/weatherImg"
            android:layout_width="@dimen/weather_width"
            android:layout_height="@dimen/weather_width"
            android:src="@mipmap/w99"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow"
                android:textSize="@dimen/weather_text_normal"
                android:paddingRight="@dimen/talk_text_size"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/temptrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow"
                android:paddingLeft="@dimen/talk_text_size"
                android:textSize="@dimen/weather_text_normal"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/talk_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/talk_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presure"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/talk_padding"
            android:padding="@dimen/talk_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_direction_degree"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/wind_direction_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:paddingLeft="@dimen/talk_text_size"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknow"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--天气预报开始-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/head_text_padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/head_text_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/startDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
                <TextView
                    android:id="@+id/text_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/max_temp"/>
                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/min_temp"/>
                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/head_text_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/startDay2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
                <TextView
                    android:id="@+id/text_day2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/max_temp"/>
                <TextView
                    android:id="@+id/max_temp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/min_temp"/>
                <TextView
                    android:id="@+id/min_temp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/head_text_padding"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/startDay3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
                <TextView
                    android:id="@+id/text_day3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/max_temp"/>
                <TextView
                    android:id="@+id/max_temp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/min_temp"/>
                <TextView
                    android:id="@+id/min_temp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/weather_text_small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/unknow"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
